--- a/baselines/flwr_baselines/publications/adaptive_federated_optimization/conf/organsmnist/config.yaml
+++ b/baselines/flwr_baselines/publications/adaptive_federated_optimization/conf/organsmnist/config.yaml
@@ -1,6 +1,7 @@
 ---
-dataset_name: "cifar10"
-num_classes: 10
+dataset_name: "tissuemnist"
+num_classes: 8
+num_channels: 1
 batch_size: 4
 epochs_per_round: 4
 lda_concentration: .inf
@@ -14,35 +15,39 @@ hydra.job.chdir: False
 is_simulation: True
 
 gen_federated_partitions:
-  _target_: cifar.utils.gen_cifar10_partitions
+  _target_: medicalmnist.utils.gen_partitions
   dataset_name: ${dataset_name}
   num_total_clients: ${num_total_clients}
   lda_concentration: ${lda_concentration}
 
 get_initial_parameters:
-  _target_: cifar.utils.get_initial_parameters
+  _target_: medicalmnist.utils.get_initial_parameters
   num_classes: ${num_classes}
+  num_channels: ${num_channels}
 
 get_eval_fn:
-  _target_: cifar.utils.get_cifar_eval_fn
+  _target_: medicalmnist.utils.get_eval_fn
+  dataset_name: ${dataset_name}
   num_classes: ${num_classes}
+  num_channels: ${num_channels}
 
 gen_on_fit_config_fn:
-  _target_: cifar.utils.gen_on_fit_config_fn
+  _target_: medicalmnist.utils.gen_on_fit_config_fn
   epochs_per_round: ${epochs_per_round}
   batch_size: ${batch_size}
 
 plot_results:
-  _target_: cifar.utils.plot_metric_from_history
+  _target_: medicalmnist.utils.plot_metric_from_history
   dataset_name: ${dataset_name}
   strategy_name: ${strategy.name}
   expected_maximum: ${strategy.expected_accuracy}
   save_plot_path: ./${dataset_name}_${strategy.name}.png
 
 get_ray_client_fn:
-  _target_: cifar.client.get_ray_client_fn
+  _target_: medicalmnist.client.get_ray_client_fn
   fed_dir: None
   num_classes: ${num_classes}
+  num_channels: ${num_channels}
 
 ray_config:
   include_dashboard: False
